# covid-uk-api

./: README.md  pyproject.toml  setup.sh
.devcontainer/: Dockerfile
src/: main.py
src/scraper/: types.py  url_factory.py
src/scraper/private/: types.py
src/scraper/public/: functions.py  type_constructors.py
test/scraper/: url_builder_test.py
