[tool.poetry]
name = "covid-uk-api"
version = "0.1.0"
description = ""
authors = ["Edward <edward@correctsoftware.co>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
pydantic = "^1.8.2"
psycopg2 = "^2.9.1"
black = "^21.6b0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
